--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 	<meta name="viewport" content="width=1920">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="stylesheet" href="styles/4e5297cb.main.css"/>
-	<script src="scripts/vendor/a52a8685.modernizr.js"></script>
+	<link rel="stylesheet" href="styles/ed798f02.ed798f02.main.css">
+	<script src="scripts/vendor/a52a8685.a52a8685.modernizr.js"></script>
 </head>
 
 <body>
@@ -158,7 +158,7 @@
 								<div class="hexagon__background">
 									<div id="champion" class="hexagon__content">
 										<div class="hexagon hexagon--half">
-											<img src="images/08c42ef7.trophy.svg" alt="">
+											<img src="images/08c42ef7.08c42ef7.trophy.svg" alt="">
 										</div>
 										<input type="text" disabled="disabled" value="">
 										<h2>Weltmeister</h2>
@@ -173,17 +173,26 @@
 		</div>
 	</div>
 
-	<div class="group-matches">
-		<div class="group group--a"></div>
-		<div class="group group--b"></div>
-		<div class="group group--c"></div>
-		<div class="group group--d"></div>
-		<div class="group group--e"></div>
-		<div class="group group--f"></div>
-		<div class="group group--g"></div>
-		<div class="group group--h"></div>
-	</div>
+	<div>
+		<div class="stadium">
+			<div class="stadium-view"></div>
+			<div class="stadium-table-container">
+					<h2>Stadionübersicht</h2>
+					<table class="stadium-table"></table>
+			</div>
+		</div>
 
+		<div class="group-matches">
+			<div class="group group--a"></div>
+			<div class="group group--b"></div>
+			<div class="group group--c"></div>
+			<div class="group group--d"></div>
+			<div class="group group--e"></div>
+			<div class="group group--f"></div>
+			<div class="group group--g"></div>
+			<div class="group group--h"></div>
+		</div>
+	</div>
 	<footer class="cf text--center vertical--middle">
 		<div class="float--left text--left">
 			<a id="reset" href="#reset">Alle Ergebnisse löschen</a><br>
@@ -191,7 +200,7 @@
 		</div>
 		Best Viewed Large &#x2122;
 		<div class="media float--right">
-			<img class="media__img media__img--rev" src="images/10610c33.zeroseven.png" alt="zeroseven design studios" height="30">
+			<img class="media__img media__img--rev" src="images/10610c33.10610c33.zeroseven.png" alt="zeroseven design studios" height="30">
 			<div class="media__body text--right">
 				Für euch und uns aus den zeroseven design studios.<br>
 				<a href="http://www.zeroseven.de">www.zeroseven.de</a>
@@ -211,11 +220,11 @@
 		ga('create','UA-1431678-14');ga('send','pageview');
 	</script>
 
-	<script src="scripts/b5675c1c.vendor.js"></script>
+	<script src="scripts/b5675c1c.b5675c1c.vendor.js"></script>
 
-	<script src="scripts/d41d8cd9.plugins.js"></script>
+	<script src="scripts/d41d8cd9.d41d8cd9.plugins.js"></script>
 
-	<script src="scripts/651252fc.main.js"></script>
+	<script src="scripts/8061e97c.8061e97c.main.js"></script>
 
 	<script>
 		$(document).ready(function() {
