--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 	<meta name="viewport" content="width=1920">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="stylesheet" href="styles/ed798f02.ed798f02.main.css">
-	<script src="scripts/vendor/a52a8685.a52a8685.modernizr.js"></script>
+	<link rel="stylesheet" href="styles/ed798f02.main.css"/>
+	<script src="scripts/vendor/a52a8685.modernizr.js"></script>
 </head>
 
 <body>
@@ -158,7 +158,7 @@
 								<div class="hexagon__background">
 									<div id="champion" class="hexagon__content">
 										<div class="hexagon hexagon--half">
-											<img src="images/08c42ef7.08c42ef7.trophy.svg" alt="">
+											<img src="images/08c42ef7.trophy.svg" alt="">
 										</div>
 										<input type="text" disabled="disabled" value="">
 										<h2>Weltmeister</h2>
@@ -200,7 +200,7 @@
 		</div>
 		Best Viewed Large &#x2122;
 		<div class="media float--right">
-			<img class="media__img media__img--rev" src="images/10610c33.10610c33.zeroseven.png" alt="zeroseven design studios" height="30">
+			<img class="media__img media__img--rev" src="images/10610c33.zeroseven.png" alt="zeroseven design studios" height="30">
 			<div class="media__body text--right">
 				Für euch und uns aus den zeroseven design studios.<br>
 				<a href="http://www.zeroseven.de">www.zeroseven.de</a>
@@ -220,11 +220,11 @@
 		ga('create','UA-1431678-14');ga('send','pageview');
 	</script>
 
-	<script src="scripts/b5675c1c.b5675c1c.vendor.js"></script>
+	<script src="scripts/b5675c1c.vendor.js"></script>
 
-	<script src="scripts/d41d8cd9.d41d8cd9.plugins.js"></script>
+	<script src="scripts/d41d8cd9.plugins.js"></script>
 
-	<script src="scripts/8061e97c.8061e97c.main.js"></script>
+	<script src="scripts/8061e97c.main.js"></script>
 
 	<script>
 		$(document).ready(function() {
@@ -398,7 +398,7 @@
 							[0, 2], '06/17/2014 21:00', '01'
 						],
 						[
-							[3, 1], '06/18/2014 18:00', '12'
+							[3, 1], '06/19/2014 00:00', '12'
 						],
 						[
 							[3, 0], '06/23/2014 22:00', '10'
